# ml-smart

./: Cargo.toml
src/: boston.rs  digits.rs  flag.rs  iris.rs  kmeans.rs  main.rs  results.rs  wine.rs  wine_quality.rs
src/dataset/: flag.rs  mod.rs  wine.rs  wine_quality.rs
src/flags/: dbscan.rs  decision_tree_classifier.rs  kmeans.rs  knn_classifier.rs  mod.rs  random_forest.rs
src/iris/: clustering.rs  mod.rs
