[package]
name = "ml-smart"
version = "0.1.0"
authors = ["Naveneetha Vasudevan <naveneetha@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smartcore = "0.2.0"
prettytable-rs = "^0.8"
lazy_static = "1.4.0"
rayon = "1.5.1"